@@ -24,5 +24,32 @@ for dir in $(find "$macio" -type d); do
 	elif [ "$name" = bmac ] || ([ "$device_type" = network ] && [ "$compatible" = bmac+ ]); then
 		echo "bmac:PowerMac BMAC Ethernet"
 		register-module bmac
+	elif [ "$name" = awacs ]; then
+		case "$(uname -r)" in
+		2.4*)
+			register-module dmasound_pmac
+			;;
+		2.6*)
+			# probably best to go for ALSA
+			register-module snd-powermac
+			;;
+		esac
+	elif [ "$name" = davbus ] || [ "$name" = i2s-a ]; then
+		for child in "$dir"/*; do
+			if [ -f "$child/name" ]; then
+				childname="$(cat "$child/name" 2>/dev/null || true)"
+				if [ "$childname" = sound ]; then
+					case "$(uname -r)" in
+					2.4*)
+						register-module dmasound_pmac
+						;;
+					2.6*)
+						# probably best to go for ALSA
+						register-module snd-powermac
+						;;
+					esac
+				fi
+			fi
+		done
 	fi
 done
