@@ -5,6 +5,8 @@ ddetect (1.02) UNRELEASED; urgency=low
       after the first reboot.
     - Move mac-io hardware detection out to a separate file, only installed
       on powerpc.
+    - Detect dmasound_pmac/snd-powermac (depending on kernel version) on
+      PowerMacs.
   * Joshua Kwan
     - Add USB stuff to devnames.txt.
     - Don't try to load sbp2 unless we also have scsi_mod lying around.
